fixed button spacing with err msg

--- a/Saucier720-app/src/app/homepage/FEC/user-dashboard/user-dashboard.component.scss
+++ b/Saucier720-app/src/app/homepage/FEC/user-dashboard/user-dashboard.component.scss
@@ -128,6 +128,7 @@
     border-radius: 0.925vw; /* 10px converted to vw */
     color: var(--text-color);
     margin-top: 1.852vh; /* 20px converted to vh */
+    margin-bottom: 12.5vh;
 }
 
 .error-icon {
@@ -141,14 +142,14 @@
 
 .error-text h3 {
     margin: 0;
-    font-size: 2.222vw; /* 24px converted to vw */
+    font-size: 1.5vw; /* 24px converted to vw */
     font-weight: bold;
     margin-bottom: 0.925vw; /* 10px converted to vw */
 }
 
 .error-text p {
     margin: 0;
-    font-size: 1.481vw; /* 16px converted to vw */
+    font-size: 1vw; /* 16px converted to vw */
 }
 
 // recipe card styling
